--- a/index.html
+++ b/index.html
@@ -1,1 +1,123 @@
-Hi epta
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lua & Python Dev — Pon</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      font-family: 'Roboto Mono', monospace;
+      background-color: #121212;
+      color: #fff;
+      line-height: 1.6;
+    }
+    header {
+      background: #1e1e1e;
+      padding: 1rem 2rem;
+      text-align: center;
+      border-bottom: 2px solid #333;
+    }
+    header h1 {
+      font-size: 2rem;
+      color: #00bcd4;
+    }
+    nav {
+      margin-top: 0.5rem;
+    }
+    nav a {
+      color: #ccc;
+      margin: 0 1rem;
+      text-decoration: none;
+      transition: color 0.2s;
+    }
+    nav a:hover {
+      color: #00bcd4;
+    }
+    main {
+      padding: 2rem;
+      max-width: 900px;
+      margin: auto;
+    }
+    section {
+      background: #1f1f1f;
+      padding: 1.5rem;
+      margin-bottom: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 0 10px rgba(0, 188, 212, 0.1);
+    }
+    h2 {
+      color: #00bcd4;
+      margin-bottom: 1rem;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background: #1e1e1e;
+      border-top: 2px solid #333;
+      font-size: 0.9rem;
+      color: #777;
+    }
+    .contact a {
+      color: #00bcd4;
+      text-decoration: none;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Lua & Python Dev — Pon</h1>
+    <nav>
+      <a href="#lua">Lua</a>
+      <a href="#python">Python</a>
+      <a href="#workflow">Процесс</a>
+      <a href="#contact">Контакты</a>
+    </nav>
+  </header>
+
+  <main>
+    <section id="lua">
+      <h2>Разработка Lua скриптов</h2>
+      <ul>
+        <li>Создание скриптов под MoonLoader и MonetLoader</li>
+        <li>Модификация и адаптация существующих решений</li>
+        <li>Работа с интерфейсом через mimgui и CEF</li>
+      </ul>
+    </section>
+
+    <section id="python">
+      <h2>Telegram-боты (Python)</h2>
+      <ul>
+        <li>Разработка ботов под любые задачи</li>
+        <li>Интеграции, автоматизация, интерфейсы</li>
+      </ul>
+    </section>
+
+    <section id="workflow">
+      <h2>Как происходит работа</h2>
+      <ol>
+        <li>Вы описываете задачу (если бот для SAMP — видео желательно)</li>
+        <li>Я называю цену и сроки</li>
+        <li>Если всё устраивает — приступаю к работе</li>
+        <li>Показываю видео-демонстрацию</li>
+        <li>Вы оплачиваете, и я передаю скрипт или загружаю бота</li>
+      </ol>
+    </section>
+
+    <section id="contact" class="contact">
+      <h2>Контакты и оплата</h2>
+      <p>Telegram: <a href="https://t.me/daniel2903_pon" target="_blank">@daniel2903_pon</a></p>
+      <p>Оплата: ЮMoney, в крайнем случае — Telegram Stars</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Pon. Все права защищены.</p>
+  </footer>
+</body>
+</html>
