--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lua & Python Dev — Pon</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
+  <title>Pon — Lua & Python Dev</title>
+  <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     * {
       margin: 0;
@@ -12,112 +13,63 @@
       box-sizing: border-box;
     }
     body {
-      font-family: 'Roboto Mono', monospace;
-      background-color: #121212;
-      color: #fff;
-      line-height: 1.6;
+      background-color: #0f0f0f;
+      color: #f5f5f5;
+      font-family: 'JetBrains Mono', monospace;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
     }
-    header {
-      background: #1e1e1e;
-      padding: 1rem 2rem;
-      text-align: center;
-      border-bottom: 2px solid #333;
-    }
-    header h1 {
-      font-size: 2rem;
-      color: #00bcd4;
-    }
-    nav {
-      margin-top: 0.5rem;
-    }
-    nav a {
-      color: #ccc;
-      margin: 0 1rem;
-      text-decoration: none;
-      transition: color 0.2s;
-    }
-    nav a:hover {
-      color: #00bcd4;
-    }
-    main {
+    .card {
+      background-color: #1c1c1c;
       padding: 2rem;
-      max-width: 900px;
-      margin: auto;
-    }
-    section {
-      background: #1f1f1f;
-      padding: 1.5rem;
-      margin-bottom: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0, 188, 212, 0.1);
-    }
-    h2 {
-      color: #00bcd4;
-      margin-bottom: 1rem;
-    }
-    footer {
+      border-radius: 16px;
+      max-width: 420px;
+      width: 100%;
+      box-shadow: 0 0 20px rgba(0, 188, 212, 0.2);
       text-align: center;
-      padding: 1rem;
-      background: #1e1e1e;
-      border-top: 2px solid #333;
-      font-size: 0.9rem;
-      color: #777;
+      z-index: 1;
     }
-    .contact a {
+    h1 {
+      font-size: 1.8rem;
+      margin-bottom: 1rem;
       color: #00bcd4;
+    }
+    p {
+      font-size: 1rem;
+      margin-bottom: 1rem;
+      color: #ddd;
+    }
+    .links a {
+      display: inline-block;
+      margin: 0.5rem;
+      padding: 0.5rem 1rem;
+      border-radius: 8px;
+      background: #00bcd4;
+      color: #000;
       text-decoration: none;
+      font-weight: bold;
+      transition: background 0.3s;
+    }
+    .links a:hover {
+      background: #0097a7;
+    }
+    .links i {
+      margin-right: 0.5rem;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Lua & Python Dev — Pon</h1>
-    <nav>
-      <a href="#lua">Lua</a>
-      <a href="#python">Python</a>
-      <a href="#workflow">Процесс</a>
-      <a href="#contact">Контакты</a>
-    </nav>
-  </header>
-
-  <main>
-    <section id="lua">
-      <h2>Разработка Lua скриптов</h2>
-      <ul>
-        <li>Создание скриптов под MoonLoader и MonetLoader</li>
-        <li>Модификация и адаптация существующих решений</li>
-        <li>Работа с интерфейсом через mimgui и CEF</li>
-      </ul>
-    </section>
-
-    <section id="python">
-      <h2>Telegram-боты (Python)</h2>
-      <ul>
-        <li>Разработка ботов под любые задачи</li>
-        <li>Интеграции, автоматизация, интерфейсы</li>
-      </ul>
-    </section>
-
-    <section id="workflow">
-      <h2>Как происходит работа</h2>
-      <ol>
-        <li>Вы описываете задачу (если бот для SAMP — видео желательно)</li>
-        <li>Я называю цену и сроки</li>
-        <li>Если всё устраивает — приступаю к работе</li>
-        <li>Показываю видео-демонстрацию</li>
-        <li>Вы оплачиваете, и я передаю скрипт или загружаю бота</li>
-      </ol>
-    </section>
-
-    <section id="contact" class="contact">
-      <h2>Контакты и оплата</h2>
-      <p>Telegram: <a href="https://t.me/daniel2903_pon" target="_blank">@daniel2903_pon</a></p>
-      <p>Оплата: ЮMoney, в крайнем случае — Telegram Stars</p>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Pon. Все права защищены.</p>
-  </footer>
+  <div class="card">
+    <h1>Pon — Lua & Python Dev</h1>
+    <p>Привет! Я разрабатываю Lua-скрипты для MoonLoader / MonetLoader (боты, интерфейсы, улучшения), а так же пишу Telegram-ботов на Python под любые задачи. Работаю быстро и по делу.</p>
+    <div class="links">
+      <a href="https://t.me/daniel2903_pon" target="_blank"><i class="fab fa-telegram"></i>Telegram</a>
+      <a href="https://github.com/daniel-pon" target="_blank"><i class="fab fa-github"></i>GitHub</a>
+      <a href="https://blast.hk/members/519052/" target="_blank"><i class="fas fa-user"></i>Blast.hk</a>
+    </div>
+  </div>
 </body>
 </html>
