--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     <p>Привет! Я разрабатываю Lua-скрипты для MoonLoader / MonetLoader (боты, интерфейсы, улучшения), а так же пишу Telegram-ботов на Python под любые задачи. Работаю быстро и по делу.</p>
     <div class="links">
       <a href="https://t.me/daniel2903_pon" target="_blank"><i class="fab fa-telegram"></i>Telegram</a>
-      <a href="https://github.com/daniel-pon" target="_blank"><i class="fab fa-github"></i>GitHub</a>
-      <a href="https://blast.hk/members/519052/" target="_blank"><i class="fas fa-user"></i>Blast.hk</a>
+      <a href="https://github.com/Daniel2903Pon" target="_blank"><i class="fab fa-github"></i>GitHub</a>
+      <a href="https://blast.hk/members/519052/" target="_blank"><i class="fas fa-user"></i>Blast Hack</a>
     </div>
   </div>
 </body>
